# davrods

./: .gitignore  CMakeLists.txt  Makefile  README.advanced.md  README.md  auth.c  auth.h  byterange.h  changelog.txt  common.c  common.h  config.c  config.h  davrods-anonymous-vhost.conf  davrods-vhost.conf  doxygen.conf  irods_environment.json  lock_local.h  mod_davrods.h  prop.c  prop.h  propdb.c  repo.c  repo.h
.github/workflows/: build-push-image-davrods.yml  build-push-image-provider.yml  linter-irods-clang-format.yml  webdav-test.yml
aux/: README.md
aux/common/: irods_environment.json
aux/common/listing/: README.md  footer.html  head.html  header.html
aux/deb/: davrods-anonymous-vhost.conf  davrods-vhost.conf  davrods.conf  postinst
aux/listing/: header.html
aux/rpm/: davrods-anonymous-vhost.conf  davrods-vhost.conf  davrods.conf  description.txt  postinst.sh
docker/: .env  docker-compose.yml
docker/images/davrods-dev/: Dockerfile  apache2.conf  build.sh  davrods-anonymous-vhost.conf  davrods-vhost.conf  davrods_init.sh  initialize-davrods-lockdb.py  irods_environment.json  ssl.conf
docker/images/davrods-provider/: Dockerfile  build.sh  core.re.template  irods-icat-init.sh  irods-log-transform.py  irods.pam  odbc-settings.txt  provider-unattended-install.irods-5.0.template  rsyslog.conf  rsyslogd-irods.conf  server_config.json  set-up-test-accounts.sh
package/: changelog.txt
src/: auth.c  auth.h  byterange.c  byterange.h  common.c  common.h  config.c  config.h  listing.c  listing.h  lock_local.c  lock_local.h  mod_davrods.c  mod_davrods.h  prop.c  prop.h  propdb.c  propdb.h  repo.c  repo.h
tests/: conftest.py  requirements.txt
tests/environments/: docker.json
tests/features/: webdav.feature
tests/features/webdav/: webdav.feature
tests/step_defs/: test_webdav.py
tests/step_defs/webdav/: test_webdav.py
vagrant/dev/: .env  install-davrods-build-env.sh
